[package]
name = "jack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.3"
aws-sdk-cloudwatchlogs = "0.28.0"
chrono = "0.4.26"
chrono-english = "0.1.7"

clap = { version = "4.3.11", features = ["derive"]}
clap-verbosity-flag = "2.0.1"

color-eyre = "0.6.2"
csv = "1.2.2"

env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.19"
once_cell = "1.18.0"
serde = { version = "1.0.171" }
serde_json = "1.0.102"

tokio = { version = "1", features = ["full"] }


[build-dependencies]
clap_complete = "4.3.2"
clap = { version = "4.3.11", features = ["derive"]}
clap-verbosity-flag = "2.0.1"
chrono = "0.4.26"
chrono-english = "0.1.7"
